Some of the development of widgets and plugins for DNS Pipeline

--- a/spot-oa/ui/css/main.css
+++ b/spot-oa/ui/css/main.css
@@ -75,8 +75,13 @@
     height: 50%;
 }
 
+.glyphiconLink{
+  font-size: 20px;
+}
+
 ::-webkit-scrollbar {
-    width: 5px;
+    width: 10px;
+    height: 10px;
 }
 
 ::-webkit-scrollbar-track {
